fix bug related to css overflow

--- a/css/about-me.css
+++ b/css/about-me.css
@@ -23,6 +23,7 @@
 }
  
 .section-header {
+    padding-top: 2.5rem;
     font-size: 2.5rem;
     font-weight: 700;
     margin-bottom: 1rem;
